--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+ :root {
+  font-family: "ubuntu", sans-serif;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -25,3 +24,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+
+.svg-container{
+  position: relative;
+  height: 100vh;
+}
+
+.svg-container svg {
+  position: absolute;
+  bottom: 0;
+}
